syntax = "proto3";

package business_facilities;

option go_package = "/proto/pb";

service BusinessFacilities {
  rpc AddBusinessFacility (AddBFRequest) returns (BFResponse);
  rpc GetBusinessFacilities (GetBFRequests) returns (BFResponses);
  rpc GetBusinessFacility (GetBFRequest) returns (BFResponse);
  rpc UpdateBusinessFacility(UpdateBFRequest) returns (BFResponse);
  rpc DeleteBusinessFacility(DeleteBFRequest) returns (BFResponse);
}

message UpdateBFRequest {
  uint64 user_id = 1;
  string company_type = 2;
  double total_emission = 3;
  uint64 location_id = 4;
  uint64 id = 5;
}

message AddBFRequest {
  uint64 user_id = 1;
  string company_type = 2;
  double total_emission = 3;
  uint64 location_id = 4;
}

message GetBFRequest {
  uint64 id = 1;
}

message GetBFRequests {
  uint64 user_id = 1;
}

message DeleteBFRequest {
  uint64 id = 1;
}

message BFResponse{
  uint64 id = 1;
  uint64 user_id = 2;
  string company_type = 3;
  double total_emission = 4;
  uint64 location_id = 5;
}

message BFResponses {
  repeated BFResponse business_facilities = 1;
}